--- a/app/src/main/res/layout/activity_edit_image_test_temp.xml
+++ b/app/src/main/res/layout/activity_edit_image_test_temp.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@drawable/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.constraint.Guideline
@@ -151,6 +151,18 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvEmoji"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/tool_bg"
+        android:orientation="horizontal"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="@+id/frContainer"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/frContainer"
+        tools:listitem="@layout/row_filter_view" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvFrame"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/tool_bg"
