--- a/app/src/main/res/layout/row_editing_tools.xml
+++ b/app/src/main/res/layout/row_editing_tools.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:padding="4dp"
-    tools:background="@android:color/black">
+    tools:background="@android:color/white">
 
 
     <ImageView
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/darker_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgToolIcon"
